@@ -21,6 +21,8 @@ K9.     Scaling of floating files not clear
 
 K10.    Dnoise not changed to libsndfile
 
+K11.    Software Bus
+
 BUGS NOT FIXED
 --------------
 
